--- a/ui/astradesk-admin-panel-main/.gitignore
+++ b/ui/astradesk-admin-panel-main/.gitignore
@@ -1,27 +1,200 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# ===============================================
+# Build and Dependency Management
+# ===============================================
 
-# dependencies
-/node_modules
+# Gradle
+.gradle/
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/**/build/
+out/
+bin/
 
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# debug
+# Node.js
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
+.pnpm-store/
 
-# env files
-.env*
+# Package manager locks (choose one)
+# package-lock.json
+# yarn.lock
 
-# vercel
+
+# ===============================================
+# IDE and Editor
+# ===============================================
+
+# IntelliJ IDEA
+.idea/
+*.iml
+*.iws
+*.ipr
+modules.xml
+workspace.xml
+navEditor.xml
+
+# VSCode
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Eclipse
+.settings/
+.project
+.classpath
+.factorypath
+
+# NetBeans
+nbproject/
+nbactions.xml
+
+
+# ===============================================
+# Application Specific
+# ===============================================
+
+# Log files
+logs/
+*.log
+log/
+logging/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Configuration files with sensitive data
+application-local.yml
+application-dev.yml
+application-prod.yml
+config/application-secrets.yml
+
+# Docker
+docker-compose.override.yml
+
+
+# ===============================================
+# Operating System
+# ===============================================
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+
+
+# ===============================================
+# Frontend Build Artifacts
+# ===============================================
+
+# Next.js
+.next/
+out/
+.next-env.d.ts
+
+# React
+dist/
+public/build/
+
+# TypeScript
+*.tsbuildinfo
+
+
+# ===============================================
+# Database and Storage
+# ===============================================
+
+# Local database files
+*.db
+*.sqlite
+*.h2.db
+
+# Database dumps
+*.dump
+*.backup
+
+# Local storage
+storage/
+data/
+
+
+# ===============================================
+# Temporary Files
+# ===============================================
+
+# Temp files
+*.tmp
+*.temp
+.temp/
+tmp/
+TODO.txt
+TODO.md
+
+
+# ===============================================
+# Cloud and Deployment
+# ===============================================
+
+# AWS
+.aws/
+
+# Vercel
 .vercel
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+
+# ===============================================
+# Testing and Coverage
+# ===============================================
+
+# Test results
+test-results/
+reports/
+coverage/
+*.lcov
+.jacoco/
+
+
+# ===============================================
+# Documentation
+# ===============================================
+
+# Generated documentation
+site/
+apidocs/
+
+
+# ===============================================
+# Exceptions - Keep these
+# ===============================================
+
+# Keep gradle wrapper
+!gradle/wrapper/gradle-wrapper.jar
+!gradle/wrapper/gradle-wrapper.properties
+
+# Keep specific configuration templates
+!**/src/main/resources/application.yml
+!**/src/test/resources/application-test.yml
+
+# Keep essential IDE settings
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
