--- a/.gitignore
+++ b/.gitignore
@@ -1,59 +1,204 @@
-.gradle
+# ===============================================
+# Build and Dependency Management
+# ===============================================
+
+# Gradle
+.gradle/
 build/
 !gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
+!**/src/**/build/
 out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+bin/
 
-### Node
+# Node.js
 node_modules/
-!**/node_modules/
-!.pnp.*
-.npmrc
-package-lock.json
 npm-debug.log*
+yarn-debug.log*
 yarn-error.log*
-.yarn-integrity
-.pnp.js
-.pnp.data.json
-.pnp.cjs
+pnpm-debug.log*
+.pnpm-store/
 
-### Eclipse ###
-.apt_generated
+# Package manager locks (choose one)
+# package-lock.json
+# yarn.lock
+
+
+# ===============================================
+# IDE and Editor
+# ===============================================
+
+# IntelliJ IDEA
+.idea/
+*.iml
+*.iws
+*.ipr
+modules.xml
+workspace.xml
+navEditor.xml
+
+# VSCode
+.vscode/
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Eclipse
+.settings/
+.project
 .classpath
 .factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
+# NetBeans
+nbproject/
+nbactions.xml
 
-### VS Code ###
-.vscode/
-*.txt
+
+# ===============================================
+# Application Specific
+# ===============================================
+
+# Log files
+logs/
+*.log
+log/
+logging/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Configuration files with sensitive data
+application-local.yml
+application-dev.yml
+application-prod.yml
+config/application-secrets.yml
+
+# Docker
+docker-compose.override.yml
+
+
+# ===============================================
+# Operating System
+# ===============================================
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+
+
+# ===============================================
+# Frontend Build Artifacts
+# ===============================================
+
+# Next.js
+.next/
+out/
+.next-env.d.ts
+
+# React
+dist/
+public/build/
+
+# TypeScript
+*.tsbuildinfo
+
+
+# ===============================================
+# Database and Storage
+# ===============================================
+
+# Local database files
+*.db
+*.sqlite
+*.h2.db
+
+# Database dumps
+*.dump
+*.backup
+
+# Local storage
+storage/
+data/
+
+
+# ===============================================
+# Temporary Files
+# ===============================================
+
+# Temp files
+*.tmp
+*.temp
+.temp/
+tmp/
 TODO.md.txt
 TODO.md
 TODO*.md
+
+# ===============================================
+# Cloud and Deployment
+# ===============================================
+
+# AWS
+.aws/
+
+# Vercel
+.vercel
+
+
+# ===============================================
+# Testing and Coverage
+# ===============================================
+
+# Test results
+test-results/
+reports/
+coverage/
+*.lcov
+.jacoco/
+
+
+# ===============================================
+# Documentation
+# ===============================================
+
+# Generated documentation
+site/
+apidocs/
+
+
+# ===============================================
+# Exceptions - Keep these
+# ===============================================
+
+# Keep gradle wrapper
+!gradle/wrapper/gradle-wrapper.jar
+!gradle/wrapper/gradle-wrapper.properties
+
+# Keep specific configuration templates
+!**/src/main/resources/application.yml
+!**/src/test/resources/application-test.yml
+
+# Keep essential IDE settings
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
 
 ### Mac OS ###
 .DS_Store
