--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 # src/main/resources/application.yml
 server:
   port: 8080
+  servlet:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 100MB
 
 spring:
   application:
@@ -10,6 +14,12 @@ spring:
     url: jdbc:postgresql://localhost:5432/rag
     username: rag
     password: rag
+    hikari:
+      maximum-pool-size: 10
+      minimum-idle: 2
+      connection-timeout: 30000
+      idle-timeout: 600000
+      max-lifetime: 1800000
   sql:
     init:
       mode: always
@@ -33,6 +43,19 @@ rag:
   chunk:
     maxLen: 1200
     overlap: 200
+  api-key: ${RAG_API_KEY:}
+  cors:
+    allowed-origins: ${RAG_CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:8080}
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,metrics,prometheus
+  metrics:
+    export:
+      prometheus:
+        enabled: true
 
 s3:
   endpoint: ${S3_ENDPOINT:http://localhost:9000}
