- Rate limiting per API key - OpenTelemetry (request traces/ingest pipeline) added to CI/CD and dashboards - Integration tests with Testcontainers for PG/MinIO in CI

--- a/.env.example
+++ b/.env.example
@@ -83,6 +83,17 @@ SPRING_DATASOURCE_HIKARI_MAX_LIFETIME=1800000
 MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE=health,metrics,prometheus
 MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED=true
 
+# OpenTelemetry tracing
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318/v1/traces
+MANAGEMENT_TRACING_SAMPLING_PROBABILITY=1.0
+
+# ============================================
+# Rate Limiting
+# ============================================
+# Enable rate limiting per API key
+RAG_RATE_LIMIT_ENABLED=false
+RAG_RATE_LIMIT_RPM=60
+
 # ============================================
 # Logging Configuration
 # ============================================
