--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,6 +46,9 @@ rag:
   api-key: ${RAG_API_KEY:}
   cors:
     allowed-origins: ${RAG_CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:8080}
+  rate-limit:
+    enabled: ${RAG_RATE_LIMIT_ENABLED:false}
+    requests-per-minute: ${RAG_RATE_LIMIT_RPM:60}
 
 management:
   endpoints:
@@ -56,6 +59,12 @@ management:
     export:
       prometheus:
         enabled: true
+  tracing:
+    sampling:
+      probability: 1.0
+  otlp:
+    tracing:
+      endpoint: ${OTEL_EXPORTER_OTLP_ENDPOINT:http://localhost:4318/v1/traces}
 
 s3:
   endpoint: ${S3_ENDPOINT:http://localhost:9000}
